--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@material-ui/styles": "^5.0.0-beta.4",
     "@material-ui/system": "^5.0.0-beta.4",
     "@material-ui/utils": "^5.0.0-beta.4",
+    "@mui/material": "^5.11.10",
     "@react-pdf/renderer": "^2.0.19",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
